// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag when is clickable should render with clickable styles 1`] = `
.circuit-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  font-size: 16px;
  line-height: 24px;
  box-shadow: 0px 0px 0px 1px #D8DDE1;
  padding: 4px 12px;
  cursor: default;
  cursor: pointer;
}

.circuit-0:hover {
  background-color: #D8DDE1;
  box-shadow: 0px 0px 0px 1px #D8DDE1;
}

<div
  class="circuit-0 circuit-1"
>
  SomeTest
</div>
`;

exports[`Tag when is default should render with default styles 1`] = `
.circuit-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  font-size: 16px;
  line-height: 24px;
  box-shadow: 0px 0px 0px 1px #D8DDE1;
  padding: 4px 12px;
  cursor: default;
}

<div
  class="circuit-0 circuit-1"
>
  SomeTest
</div>
`;

exports[`Tag when is selected should change the close icon color 1`] = `
.circuit-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  font-size: 16px;
  line-height: 24px;
  box-shadow: 0px 0px 0px 1px #D8DDE1;
  padding: 4px 12px;
  cursor: default;
  background-color: #3388FF;
  box-shadow: 0px 0px 0px 1px #3388FF;
  color: #FFFFFF;
}

.circuit-3 {
  padding: 0;
  margin: 0;
  display: inline-block;
  background-color: transparent;
  border: none;
  cursor: pointer;
  fill: #0F131A;
  overflow: initial;
  height: 16px;
  width: 16px;
}

.circuit-3:focus,
.circuit-3:active {
  outline: none;
}

.circuit-3 > svg {
  height: 100%;
  width: 100%;
}

.circuit-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<div
  class="circuit-5 circuit-6"
>
  SomeTest
  <button
    class="circuit-2 circuit-3 circuit-4"
    data-testid="tag-close"
    type="button"
  >
    <div
      role="presentation"
    >
      close-icon.svg
    </div>
    <span
      class="circuit-0 circuit-1"
    >
      remove
    </span>
  </button>
</div>
`;

exports[`Tag when is selected should change the given icon color 1`] = `
.circuit-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  font-size: 16px;
  line-height: 24px;
  box-shadow: 0px 0px 0px 1px #D8DDE1;
  padding: 4px 12px;
  cursor: default;
  background-color: #3388FF;
  box-shadow: 0px 0px 0px 1px #3388FF;
  color: #FFFFFF;
}

.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 16px;
  height: 16px;
  margin-right: 8px;
}

.circuit-0 > svg {
  fill: #FFFFFF;
}

<div
  class="circuit-2 circuit-3"
>
  <div
    class="circuit-0 circuit-1"
  >
    <svg
      fill="#000000"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path />
    </svg>
  </div>
  SomeTest
</div>
`;

exports[`Tag when is selected should render with selected styles 1`] = `
.circuit-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  font-size: 16px;
  line-height: 24px;
  box-shadow: 0px 0px 0px 1px #D8DDE1;
  padding: 4px 12px;
  cursor: default;
  background-color: #3388FF;
  box-shadow: 0px 0px 0px 1px #3388FF;
  color: #FFFFFF;
}

<div
  class="circuit-0 circuit-1"
>
  SomeTest
</div>
`;
